--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.4",
     "expo-status-bar": "~1.11.1",
+    "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react_native_mqtt": "^1.3.1",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-paho-mqtt": "^0.1.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
